@@ -12,6 +12,14 @@ partman (13) UNRELEASED; urgency=low
     - parted_server.c (command_commit): commit only if named_is_changed
       returns true.  Closes: #235372.
     - parted_server.c (command_new_label): free the variable device.
+  * Joey Hess
+    - Changed the menu item text again, removing the "(partman)".
+    - Unfuzzy all translations.
+    - Make ask_user use a default_choice file (insteas of last_choice).
+    - Add a menudir_default_choice function which sets the default_choice of a
+      menudir to the output of the given menu items's choices script.
+    - Make debconf_select only set the default if a default is passed into
+      it, to allow for database preseeding.
   
  -- Anton Zinoviev <zinoviev@debian.org>  Wed,  3 Mar 2004 13:12:14 +0200
 
